"""initial schema

Revision ID: c8a70c2d9d3f
Revises:
Create Date: 2026-08-20 17:45:49.714333

"""

from collections.abc import Sequence

import pgvector.sqlalchemy.vector
import sqlalchemy as sa

# All three noqa markers are for the same situation: a migration whose body is
# empty, or which touches no str column, leaves one of these imports unused and
# `pnpm verify` goes red on a file nobody has written a line of yet.
#
# Note the submodule form. `import sqlmodel` binds the name and satisfies the
# interpreter, but pyright then reports `"sql" is not a known attribute of
# module "sqlmodel"` on every AutoString column -- 17 errors on this file alone.
# Importing the submodule that is actually referenced fixes both.
import sqlmodel.sql.sqltypes  # noqa: F401
from alembic import op
from sqlalchemy.dialects import postgresql

# autogenerate writes the two types below into the CHUNK block by their full
# dotted path -- `pgvector.sqlalchemy.vector.VECTOR` and
# `app.schemas.chunk.TSVector` -- and imports neither. Verified 20 Aug: without
# them this file raises NameError before it opens a connection.
import app.schemas.chunk  # noqa: F401

# revision identifiers, used by Alembic.
revision: str = "c8a70c2d9d3f"
down_revision: str | Sequence[str] | None = None
branch_labels: str | Sequence[str] | None = None
depends_on: str | Sequence[str] | None = None


def upgrade() -> None:
    """Upgrade schema."""
    # Autogenerate never emits this. It reads the models and writes columns;
    # it has no idea one of those column types is supplied by an extension.
    op.execute("CREATE EXTENSION IF NOT EXISTS vector")

    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table(
        "user",
        sa.Column("email", sqlmodel.sql.sqltypes.AutoString(), nullable=False),
        sa.Column("display_name", sqlmodel.sql.sqltypes.AutoString(), nullable=True),
        sa.Column("id", sa.Uuid(), nullable=False),
        sa.Column("hashed_password", sqlmodel.sql.sqltypes.AutoString(), nullable=False),
        sa.Column("created_at", sa.DateTime(timezone=True), nullable=False),
        sa.PrimaryKeyConstraint("id"),
    )
    op.create_index(op.f("ix_user_email"), "user", ["email"], unique=True)
    op.create_table(
        "course",
        sa.Column("id", sa.Uuid(), nullable=False),
        sa.Column("user_id", sa.Uuid(), nullable=False),
        sa.Column("code", sqlmodel.sql.sqltypes.AutoString(), nullable=False),
        sa.Column("name", sqlmodel.sql.sqltypes.AutoString(), nullable=False),
        sa.Column("year", sa.Integer(), nullable=False),
        sa.Column("sem", sa.Integer(), nullable=False),
        sa.Column("status", sqlmodel.sql.sqltypes.AutoString(), nullable=False),
        sa.Column("created_at", sa.DateTime(timezone=True), nullable=False),
        sa.ForeignKeyConstraint(["user_id"], ["user.id"], ondelete="CASCADE"),
        sa.PrimaryKeyConstraint("id"),
    )
    op.create_table(
        "conversation",
        sa.Column("id", sa.Uuid(), nullable=False),
        sa.Column("course_id", sa.Uuid(), nullable=False),
        sa.Column("title", sqlmodel.sql.sqltypes.AutoString(), nullable=False),
        sa.Column("created_at", sa.DateTime(timezone=True), nullable=False),
        sa.Column("updated_at", sa.DateTime(timezone=True), nullable=False),
        sa.ForeignKeyConstraint(["course_id"], ["course.id"], ondelete="CASCADE"),
        sa.PrimaryKeyConstraint("id"),
    )
    op.create_index(op.f("ix_conversation_course_id"), "conversation", ["course_id"], unique=False)
    op.create_table(
        "folder",
        sa.Column("id", sa.Uuid(), nullable=False),
        sa.Column("course_id", sa.Uuid(), nullable=False),
        sa.Column("parent_folder_id", sa.Uuid(), nullable=True),
        sa.Column("name", sqlmodel.sql.sqltypes.AutoString(), nullable=False),
        sa.Column("is_root", sa.Boolean(), nullable=False),
        sa.Column("sort_order", sa.Integer(), nullable=False),
        sa.Column("created_at", sa.DateTime(timezone=True), nullable=False),
        sa.ForeignKeyConstraint(["course_id"], ["course.id"], ondelete="CASCADE"),
        sa.ForeignKeyConstraint(["parent_folder_id"], ["folder.id"], ondelete="CASCADE"),
        sa.PrimaryKeyConstraint("id"),
    )
    op.create_table(
        "file",
        sa.Column("id", sa.Uuid(), nullable=False),
        sa.Column("folder_id", sa.Uuid(), nullable=False),
        sa.Column("filename", sqlmodel.sql.sqltypes.AutoString(), nullable=False),
        sa.Column("storage_key", sqlmodel.sql.sqltypes.AutoString(), nullable=False),
        sa.Column("sha256", sqlmodel.sql.sqltypes.AutoString(), nullable=True),
        sa.Column("mime_type", sqlmodel.sql.sqltypes.AutoString(), nullable=False),
        sa.Column("size_bytes", sa.BigInteger(), nullable=False),
        sa.Column("page_count", sa.Integer(), nullable=True),
        sa.Column(
            "status",
            sa.Enum("uploaded", "processing", "ready", "failed", name="filestatus"),
            nullable=False,
        ),
        sa.Column("error_message", sqlmodel.sql.sqltypes.AutoString(), nullable=True),
        sa.Column("uploaded_at", sa.DateTime(timezone=True), nullable=False),
        sa.Column("indexed_at", sa.DateTime(timezone=True), nullable=True),
        sa.ForeignKeyConstraint(["folder_id"], ["folder.id"], ondelete="CASCADE"),
        sa.PrimaryKeyConstraint("id"),
        sa.UniqueConstraint("storage_key"),
    )
    op.create_table(
        "message",
        sa.Column("id", sa.Uuid(), nullable=False),
        sa.Column("conversation_id", sa.Uuid(), nullable=False),
        sa.Column("scope_course_id", sa.Uuid(), nullable=False),
        sa.Column("role", sa.Enum("user", "assistant", name="chatrole"), nullable=False),
        sa.Column("content", sqlmodel.sql.sqltypes.AutoString(), nullable=False),
        sa.Column("grounded", sa.Boolean(), nullable=False),
        sa.Column("citations", postgresql.JSONB(astext_type=sa.Text()), nullable=True),
        sa.Column("mentioned_file_ids", postgresql.JSONB(astext_type=sa.Text()), nullable=True),
        sa.Column("scope_snapshot", postgresql.JSONB(astext_type=sa.Text()), nullable=True),
        sa.Column("created_at", sa.DateTime(timezone=True), nullable=False),
        sa.ForeignKeyConstraint(["conversation_id"], ["conversation.id"], ondelete="CASCADE"),
        sa.ForeignKeyConstraint(["scope_course_id"], ["course.id"], ondelete="RESTRICT"),
        sa.PrimaryKeyConstraint("id"),
    )
    op.create_table(
        "ingestion_run",
        sa.Column("id", sa.Uuid(), nullable=False),
        sa.Column("file_id", sa.Uuid(), nullable=False),
        sa.Column(
            "status",
            sa.Enum("queued", "processing", "ready", "failed", name="ingestionrunstatus"),
            nullable=False,
        ),
        sa.Column("chunker_version", sqlmodel.sql.sqltypes.AutoString(), nullable=False),
        sa.Column("embedding_model", sqlmodel.sql.sqltypes.AutoString(), nullable=False),
        sa.Column("embedding_dim", sa.SmallInteger(), nullable=False),
        sa.Column("is_active", sa.Boolean(), nullable=False),
        sa.Column("started_at", sa.DateTime(timezone=True), nullable=True),
        sa.Column("completed_at", sa.DateTime(timezone=True), nullable=True),
        sa.Column("error_message", sqlmodel.sql.sqltypes.AutoString(), nullable=True),
        sa.ForeignKeyConstraint(["file_id"], ["file.id"], ondelete="CASCADE"),
        sa.PrimaryKeyConstraint("id"),
    )
    op.create_table(
        "chunk",
        sa.Column("id", sa.Uuid(), nullable=False),
        sa.Column("ingestion_run_id", sa.Uuid(), nullable=False),
        sa.Column("file_id", sa.Uuid(), nullable=False),
        sa.Column("course_id", sa.Uuid(), nullable=False),
        sa.Column("chunk_index", sa.Integer(), nullable=False),
        sa.Column("page_start", sa.Integer(), nullable=True),
        sa.Column("page_end", sa.Integer(), nullable=True),
        sa.Column("heading", sa.String(), nullable=True),
        sa.Column("content", sa.String(), nullable=False),
        sa.Column("token_count", sa.Integer(), nullable=False),
        sa.Column("embedding", pgvector.sqlalchemy.vector.VECTOR(dim=1024), nullable=False),
        sa.Column(
            "content_tsv",
            app.schemas.chunk.TSVector(),
            sa.Computed("to_tsvector('english', content)", persisted=True),
            nullable=True,
        ),
        sa.Column("created_at", sa.DateTime(timezone=True), nullable=False),
        sa.ForeignKeyConstraint(["course_id"], ["course.id"], ondelete="CASCADE"),
        sa.ForeignKeyConstraint(["file_id"], ["file.id"], ondelete="CASCADE"),
        sa.ForeignKeyConstraint(["ingestion_run_id"], ["ingestion_run.id"], ondelete="CASCADE"),
        sa.PrimaryKeyConstraint("id"),
    )
    op.create_index(
        "chunk_content_tsv_idx", "chunk", ["content_tsv"], unique=False, postgresql_using="gin"
    )
    op.create_index(
        "chunk_embedding_idx",
        "chunk",
        ["embedding"],
        unique=False,
        postgresql_using="hnsw",
        postgresql_ops={"embedding": "vector_cosine_ops"},
    )
    op.create_unique_constraint(
        "uq_course_user_code_year_sem", "course", ["user_id", "code", "year", "sem"]
    )

    # R4 / R8 / R18 / R19 / R20 -- hand-ordered, not in the order autogenerate
    # emitted them. It sorts by table name; PostgreSQL cares about dependencies.
    # uq_ingestion_run_id_file has to exist before fk_chunk_run_file_agree,
    # because a foreign key requires a unique constraint over exactly the columns
    # it points at. Left in generated order it fails with "there is no unique
    # constraint matching given keys for referenced table".
    op.create_unique_constraint("uq_ingestion_run_id_file", "ingestion_run", ["id", "file_id"])

    # R18. chunk_index counts within a run, so it only means anything paired with
    # one. Re-indexing a file then produces a second complete set rather than a
    # collision on chunk 0.
    op.create_unique_constraint("uq_chunk_run_index", "chunk", ["ingestion_run_id", "chunk_index"])

    # R4, the half a foreign key can carry: a chunk's run and its file must
    # agree. The file_id/course_id half is NOT enforceable this way and stays
    # open -- FILE reaches its course through FOLDER, so no single row holds
    # both, and a composite key needs one.
    op.create_foreign_key(
        "fk_chunk_run_file_agree",
        "chunk",
        "ingestion_run",
        ["ingestion_run_id", "file_id"],
        ["id", "file_id"],
        ondelete="CASCADE",
    )

    # R8. One active run per file. The predicate is the whole point: without it
    # the index would cap inactive runs at one per file too, and a re-index could
    # never keep its predecessor.
    op.create_index(
        "ix_ingestion_run_one_active",
        "ingestion_run",
        ["file_id"],
        unique=True,
        postgresql_where=sa.text("is_active"),
    )

    # R19. is_active implies ready -- false only when is_active is true and
    # status is something else.
    #
    # Lowercase 'ready' deliberately: see R25. Written before that fix, this
    # constraint fails loudly rather than quietly, and which way depends on the
    # column type. Both measured 22 Aug:
    #   enum column  ->  ERROR: invalid input value for enum ... "ready",
    #                    raised while creating the constraint. The migration
    #                    stops; nothing ships.
    #   text column  ->  the constraint is created, then rejects every active
    #                    row, because 'READY' is not 'ready'. Not vacuous --
    #                    the opposite: it blocks the legitimate case.
    # The enum is the better failure of the two: it is caught before deploy.
    op.create_check_constraint(
        "ck_ingestion_run_active_is_ready",
        "ingestion_run",
        "NOT is_active OR status = 'ready'",
    )

    # R20. PostgreSQL does not index a foreign key for you.
    # Two entries from R20's list are deliberately absent: COURSE(user_id) and
    # CHUNK(ingestion_run_id). Each is the leftmost column of a UNIQUE declared
    # above, and a UNIQUE builds its own index, so both are already served.
    op.create_index(op.f("ix_folder_course_id"), "folder", ["course_id"], unique=False)
    op.create_index(
        op.f("ix_folder_parent_folder_id"), "folder", ["parent_folder_id"], unique=False
    )
    op.create_index(op.f("ix_file_folder_id"), "file", ["folder_id"], unique=False)
    op.create_index(op.f("ix_file_sha256"), "file", ["sha256"], unique=False)
    # Not served by ix_ingestion_run_one_active: a partial index only answers a
    # query whose own predicate implies its WHERE.
    op.create_index(op.f("ix_ingestion_run_file_id"), "ingestion_run", ["file_id"], unique=False)
    # ### end Alembic commands ###


def downgrade() -> None:
    """Downgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    # Reverse of upgrade(): whatever depends on something else goes first.
    # The composite foreign key before the unique constraint it points at.
    op.drop_index(op.f("ix_ingestion_run_file_id"), table_name="ingestion_run")
    op.drop_index(op.f("ix_file_sha256"), table_name="file")
    op.drop_index(op.f("ix_file_folder_id"), table_name="file")
    op.drop_index(op.f("ix_folder_parent_folder_id"), table_name="folder")
    op.drop_index(op.f("ix_folder_course_id"), table_name="folder")
    op.drop_constraint("ck_ingestion_run_active_is_ready", "ingestion_run", type_="check")
    op.drop_index(
        "ix_ingestion_run_one_active",
        table_name="ingestion_run",
        postgresql_where=sa.text("is_active"),
    )
    op.drop_constraint("fk_chunk_run_file_agree", "chunk", type_="foreignkey")
    op.drop_constraint("uq_chunk_run_index", "chunk", type_="unique")
    op.drop_constraint("uq_ingestion_run_id_file", "ingestion_run", type_="unique")
    op.drop_constraint("uq_course_user_code_year_sem", "course", type_="unique")
    op.drop_index(
        "chunk_embedding_idx",
        table_name="chunk",
        postgresql_using="hnsw",
        postgresql_ops={"embedding": "vector_cosine_ops"},
    )
    op.drop_index("chunk_content_tsv_idx", table_name="chunk", postgresql_using="gin")
    op.drop_table("chunk")
    op.drop_table("ingestion_run")
    op.drop_table("message")
    op.drop_table("file")
    op.drop_table("folder")
    op.drop_index(op.f("ix_conversation_course_id"), table_name="conversation")
    op.drop_table("conversation")
    op.drop_table("course")
    op.drop_index(op.f("ix_user_email"), table_name="user")
    op.drop_table("user")
    # ### end Alembic commands ###

    # op.drop_table removes the table and nothing else. A PostgreSQL enum is a
    # type in its own right: it outlives every table that used it, and the next
    # upgrade then dies with DuplicateObjectError. Verified 20 Aug -- downgrade
    # base left chatrole, filestatus and ingestionrunstatus behind, and the
    # re-upgrade failed on `type "filestatus" already exists`.
    sa.Enum(name="chatrole").drop(op.get_bind(), checkfirst=True)
    sa.Enum(name="filestatus").drop(op.get_bind(), checkfirst=True)
    sa.Enum(name="ingestionrunstatus").drop(op.get_bind(), checkfirst=True)

    # The vector extension is deliberately NOT dropped. It is database-wide, not
    # ours alone, and `CREATE EXTENSION IF NOT EXISTS` on the way back up is
    # already idempotent.
