%% NotToBeCooked — Entity Relationship Diagram
%% Source of record. Ratified 27 Jul 2026, amended 4 Aug (CR-23), 15 Aug 2026
%% (CR-24, CR-25, CR-26, CR-27) and 25 Aug 2026 (CR-31, CR-32).
%% ---
%% 9 entities. Declaration order below is deliberate: it controls how dagre ranks
%% the nodes, and reordering will reintroduce edge crossings.
%% ---
%% Changes on 15 Aug 2026:
%%   CR-24  MESSAGE gains scope_course_id (NOT NULL, ON DELETE RESTRICT) +
%%          scope_snapshot
%%   CR-25  FOLDER added; CHUNK gains course_id + content_tsv; INGESTION_RUN added
%%          and parented to FILE; FILE_VERSION rejected; flashcard entities rejected
%%   Item 02 confirmed 1:N between COURSE and CONVERSATION — ConversationCourseLink
%%          is withdrawn, it was never ratified
%% ---
%% CR-27, post-meeting review. Six corrections:
%%   R2  MESSAGE.course_id renamed scope_course_id — it never meant the same thing
%%       as CONVERSATION.course_id, and the shared name invited the confusion
%%   R3  ON DELETE CASCADE downgraded to RESTRICT — CASCADE deleted turns out of
%%       the middle of unrelated conversations. REOPENS sub-decision 1 of item 03
%%   R7  FILE.sha256 UNIQUE removed — it was global, so the second user to upload
%%       the same PDF would have been rejected
%%   R9  FOLDER gains parent_folder_id — the column is free now and a migration
%%       later. The UI still ships flat; nothing has to read this column yet.
%%       The FOLDER-to-FOLDER edge is deliberately NOT drawn: dagre routes a
%%       self-reference as a long tail that pushes FOLDER-to-FILE across
%%       CONVERSATION. The column carries the meaning; the edge only cost clarity
%%   R11 COURSE gains name — code alone ("CPC251") is not a readable course title
%%   R12 CHUNK.page_number renamed page_start — it sits next to page_end and the
%%       old pair did not read as a range
%% ---
%% FIELD RESTORATION, 15 Aug 2026 evening. This diagram was rewritten from the
%% meeting minutes rather than edited on top of the ratified 27 Jul / CR-23 ERD,
%% and silently dropped eight ratified fields on the way. Restored here:
%%   MILESTONE  position, description, status, file_ids, created_at, updated_at
%%              — CR-23 ratified all of them, and US-16 (completion %) and US-17
%%              (milestone -> files) cannot be built without status and file_ids
%%   CHUNK      token_count, created_at
%%   COURSE     status
%%   FILE       filename — restores the Project Lead call of 3 Aug 2026, which
%%              chose `filename` over `name`. The interim `display_name` was a
%%              third spelling that no decision ever authorised
%% Removed, because it was never ratified and this diagram introduced it:
%%   CONVERSATION.user_id — the 27 Jul ERD reached the owner through COURSE. Both
%%              post-meeting reviews flagged the redundancy; it was mine, so this
%%              is a restoration, not a new decision. Closes finding R1
%% ---
%% Superseded rather than dropped, recorded so the absence is not read as an
%% oversight:
%%   FILE.category    -> FOLDER (CR-25). A free-text label became a real entity
%%   FILE.course_id   -> folder_id (CR-25), and back again (CR-31, 25 Aug). Deriving
%%                       the course through the folder was correct as a reading path
%%                       and useless as a foreign key target — see the 25 Aug block
%%   FILE.storage_path-> storage_key. Object-store key, not a filesystem path
%%   USER.password_hash -> hashed_password. Project Lead call: the code already
%%                       uses hashed_password (schemas/user.py, routers/auth.py),
%%                       same reasoning as the `filename` call on 3 Aug
%%   datetime -> timestamptz throughout. Naive timestamps are not storable for a
%%                       system whose citations must survive a re-index
%% ---
%% ---
%% 18 Aug 2026 meeting. Ten decisions, all carried on the recommendation. The four
%% that change this diagram:
%%   D1  CONVERSATION and FILE both follow this diagram, not the code (option A).
%%       So CONVERSATION keeps course_id alone and FILE hangs off FOLDER. The code
%%       was aligned the same night — see docs/erd/CODE_VS_ERD.md
%%   D2  MESSAGE keeps all three of scope_course_id, citations and scope_snapshot,
%%       and scope_course_id keeps ON DELETE RESTRICT. This closes R3: the 15 Aug
%%       CASCADE vote is superseded, not merely flagged
%%   D3  CR-28 approved. The active embedding dimension is 1024, not 1536
%%   Lead call 2  USER gains display_name. The column has existed in the code since
%%       the first commit; the diagram was the side that was wrong
%% ---
%% 25 Aug 2026 meeting. Two decisions change this diagram, both shipped as r42:
%%   CR-31  FILE regains course_id, denormalised from FOLDER. Not for convenience:
%%       R4's second half needs CHUNK.course_id to agree with CHUNK.file_id, and a
%%       composite foreign key must point at real columns on one table. No column
%%       carried both file_id and course_id, so there was nothing to point at.
%%       Two links now, and each is a real constraint rather than a convention:
%%           CHUNK (file_id, course_id)   -> FILE   (id, course_id)
%%           FILE  (folder_id, course_id) -> FOLDER (id, course_id)
%%       FOLDER and FILE each carry UNIQUE (id, course_id) to be those targets.
%%       Neither forbids anything new -- id is already a primary key on both --
%%       exactly as INGESTION_RUN carries uq_ingestion_run_id_file for R4's first
%%       half. Reading a file's course still costs no join; that was never the
%%       question. Closes R4
%%   CR-32  COURSE.status becomes an enum of active and archived. Ratified 27 Jul
%%       with no value set ever defined, and the code only ever wrote "active".
%%       Two values because R16 declined soft delete and scope_course_id is
%%       RESTRICT: a course used by any run can never be deleted, so archived is
%%       the only way a user gets it out of the sidebar. Lowercase per R25
%% Findings closed the same night:
%%   R13 declined — no MESSAGE_SCOPE_COURSE junction table in v1. Reopens if US-12
%%       produces an acceptance case that genuinely needs two courses on one turn
%%   R14 accepted, then routed by Lead ruling to scope_snapshot rather than into
%%       citations. A chunk id inside a citation breaks on re-index; inside a
%%       snapshot a stale id is simply the record of what happened
%%   R15 accepted — signup creates one "Unsorted" course, so course_id can stay
%%       NOT NULL without making first run a dead end (routers/auth.py)
%%   R16 declined — no soft delete in v1. Note the consequence: with RESTRICT on
%%       MESSAGE.scope_course_id and no deleted_at, a course that has been used in
%%       any turn cannot be removed at all. v1 ships with no delete-course feature
%%   R6  not reached on the night, so it proceeds on the recommendation as recorded:
%%       mentioned_file_ids stays JSONB with no foreign key in v1. Folder-level
%%       @-mentions are first item at the next meeting
%%   R10 deferred again. Turn order stays implied by created_at in v1
%% ---
%% A bare "%%" line breaks mermaid's ER parser. Every comment line needs content.

erDiagram

    USER ||--o{ COURSE : "owns"
    COURSE ||--o{ FOLDER : "organises"
    COURSE ||--o{ MILESTONE : "planned as"
    COURSE ||--o{ CONVERSATION : "is home course of"
    FOLDER ||--o{ FILE : "contains"
    COURSE ||--o{ FILE : "scopes"
    FILE ||--o{ INGESTION_RUN : "was processed by"
    INGESTION_RUN ||--o{ CHUNK : "produced"
    FILE ||--o{ CHUNK : "cited as"
    COURSE ||--o{ CHUNK : "scopes"
    CONVERSATION ||--o{ MESSAGE : "contains"
    COURSE ||--o{ MESSAGE : "scopes retrieval for"

    USER {
        uuid id PK
        string email UK
        string display_name "nullable — Lead call 2, 18 Aug. The code had it all along"
        string hashed_password
        timestamptz created_at
    }

    COURSE {
        uuid id PK
        uuid user_id FK
        string code "CPC251"
        string name "Artificial Intelligence — the code alone is not readable"
        int year
        int sem
        enum status "active, archived — CR-32, 25 Aug. Ratified 27 Jul with no value set; r42 gave it one"
        timestamptz created_at
    }

    FOLDER {
        uuid id PK
        uuid course_id FK
        uuid parent_folder_id FK "null at the root; UI ships flat, the column is for later"
        string name
        bool is_root "true when parent_folder_id is null; a course may have several top-level folders (CR-34)"
        int sort_order
        timestamptz created_at
    }

    MILESTONE {
        uuid id PK
        uuid course_id FK
        int position "display order within the course"
        string title "Week 3 - Recursion"
        string description
        int week "teaching week, nullable"
        string status "not_started, in_progress, completed — US-16 counts these"
        date due_date
        jsonb file_ids "US-17, attached materials. Deliberately not a join table"
        timestamptz created_at
        timestamptz updated_at
    }

    FILE {
        uuid id PK
        uuid folder_id FK "paired with course_id in a composite FK to FOLDER(id, course_id), so a file cannot claim a course its folder is not in — R4, CR-31"
        uuid course_id FK "denormalised from FOLDER, restored 25 Aug. Real FK to COURSE, and the target CHUNK(file_id, course_id) points at — nothing else carried both columns"
        string filename "renameable, shown in the UI. Lead call 3 Aug: filename wins"
        string storage_key UK
        string sha256 "checksum, NOT globally unique — two users may upload one PDF"
        string mime_type
        bigint size_bytes
        int page_count "null for formats without pages"
        enum status "uploaded, processing, ready, failed"
        text error_message
        timestamptz uploaded_at
        timestamptz indexed_at
    }

    INGESTION_RUN {
        uuid id PK
        uuid file_id FK
        enum status "queued, processing, ready, failed"
        string chunker_version "reproducibility, so a chunk can be traced to how it was cut"
        string embedding_model
        smallint embedding_dim "the run owns the dimension, not CHUNK. 1024 — CR-28"
        bool is_active "exactly one active run per file is visible to retrieval"
        timestamptz started_at
        timestamptz completed_at
        text error_message
    }

    CHUNK {
        uuid id PK
        uuid ingestion_run_id FK "provenance. Also half of the composite FK below"
        uuid file_id FK "denormalised, a Citation needs it without a join. Real FK to FILE, and half of two composite FKs: with ingestion_run_id to INGESTION_RUN(id, file_id), with course_id to FILE(id, course_id) — R4, both halves closed 25 Aug"
        uuid course_id FK "denormalised, the filter in front of the HNSW scan. Real FK to COURSE with ON DELETE CASCADE. Since r42 also half of the composite FK to FILE(id, course_id), so it can no longer disagree with file_id — R4"
        int chunk_index
        text content
        int token_count
        int page_start "1-based, matches what the reader sees"
        int page_end "a chunk may straddle a page break"
        string heading "nullable, no filename fallback"
        vector embedding "1024 dims — CR-28, approved 18 Aug. Read it from settings"
        tsvector content_tsv "keyword half of hybrid_search"
        timestamptz created_at
    }

    CONVERSATION {
        uuid id PK
        uuid course_id FK "home course, not unique — one course has many conversations"
        string title "Lecture 3 - Recursion"
        timestamptz created_at
        timestamptz updated_at
    }

    MESSAGE {
        uuid id PK
        uuid conversation_id FK
        uuid scope_course_id FK "NOT NULL, ON DELETE RESTRICT — the scope of THIS turn"
        enum role "user, assistant"
        text content
        bool grounded "every claim is backed by a cited source"
        string uncovered "nullable — what the sources did not cover when the answer was only partial (r47). Null means complete, so `grounded` stops carrying two meanings"
        jsonb citations "file_id, course_id, page, quote — frozen at write time"
        jsonb mentioned_file_ids "the @-scope, may cross courses, beats scope_course_id"
        jsonb scope_snapshot "what retrieval was allowed to see, frozen at write time"
        timestamptz created_at
    }
